[gd_scene load_steps=6 format=2]

[ext_resource path="res://juego4/environment/touch_buttons/lineDark01.png" type="Texture" id=1]
[ext_resource path="res://juego4/environment/touch_buttons/lineDark05.png" type="Texture" id=2]
[ext_resource path="res://juego4/environment/touch_buttons/lineDark00.png" type="Texture" id=3]
[ext_resource path="res://juego4/environment/touch_buttons/lineDark48.png" type="Texture" id=4]
[ext_resource path="res://juego4/scenes/HUD.gd" type="Script" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="touch_buttons" type="Node2D" parent="."]

[node name="left" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 0, 288 )
normal = ExtResource( 3 )

[node name="rigth" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 96, 288 )
normal = ExtResource( 1 )

[node name="up" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 56, 240 )
normal = ExtResource( 4 )

[node name="down" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 56, 320 )
normal = ExtResource( 2 )

[connection signal="pressed" from="touch_buttons/left" to="." method="_on_left_pressed"]
[connection signal="released" from="touch_buttons/left" to="." method="_on_left_released"]
[connection signal="pressed" from="touch_buttons/rigth" to="." method="_on_rigth_pressed"]
[connection signal="released" from="touch_buttons/rigth" to="." method="_on_rigth_released"]
[connection signal="pressed" from="touch_buttons/up" to="." method="_on_up_pressed"]
[connection signal="released" from="touch_buttons/up" to="." method="_on_up_released"]
[connection signal="pressed" from="touch_buttons/down" to="." method="_on_down_pressed"]
[connection signal="released" from="touch_buttons/down" to="." method="_on_down_released"]
